--- a/Parcial1/Acordeon/Acordeon.html
+++ b/Parcial1/Acordeon/Acordeon.html
@@ -1,197 +1,125 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 
 
 
-
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Menú Acordeón</title>
      <style>
-        *{
-            box-sizing:  border-box;
-            margin: 0;
-            padding: 0;
-        }
-        body{
-            width: 100vw;    
-            height: 100vh;
-        }
-
-        .content{
-            border:  2px solid blue;
-            background-color: aqua;
-            color:  blue;
-            float: left;
-            height: 100%;
-
-        }
-
-        #sibeBar{
-            width:  30%;
-
-        }
-
-        #content{
-            width: 70%;
-        }
-
-      .head{
-        border: 2px solid yellow ;
-        background-color: aqua;
-
-      }
-        
-      #Header{
-        height: 10%;
-      }
-
+         * {
+             box-sizing: border-box;
+             margin: 0;
+             padding: 0;
+         }
+         body {
+             width: 100vw;
+             height: 100vh;
+             font-family: Arial, sans-serif;
+             background-color: #f0f0f0;
+         }
+ 
+         .content {
+             border: 2px solid #3498db;
+             background-color: #ecf0f1;
+             color: #3498db;
+             float: left;
+             height: 90%;
+         }
+ 
+         #SideBar {
+             width: 30%;
+             padding: 20px;
+         }
+ 
+         #content {
+             width: 70%;
+             padding: 20px;
+         }
+ 
+         .head {
+             border: 2px solid yellow;
+             background-color: aqua;
+         }
+ 
+         #Header {
+             height: 10%;
+         }
+ 
+         /* Estilos para el menú acordeón */
+         .menu {
+             list-style-type: none;
+             padding: 0;
+         }
+ 
+         .opcion  {
+             cursor: pointer;
+             background-color: #3498db;
+             padding: 10px;
+             margin: 5px;
+             border-radius: 5px;
+             transition: background-color 0.3s ease;
+         }
+ 
+         .opcion:hover {
+             background-color: #2980b9;
+         }
+ 
+         .opcion a {
+             color: white;
+             text-decoration: none;
+         }
+ 
+         .submenu {
+             display: none;
+             padding-left: 20px;
+         }
+ 
+         .opcion:hover .submenu {
+             display: block;
+         }
+ 
+         .submenu li {
+             margin: 5px 0;
+         }
+ 
+         .submenu a {
+             color: #050505;
+             text-decoration: none;
+         }
+ 
+         .submenu a:hover {
+             color: #2980b9;
+         }
      </style>
-</head>
-<body>
-
-    <div      ></div>
-    
-    <div class="head" id="Header"> Header  </div>
-   <div class="content" id="SideBar"> SideBar </div>
-   <div class="content" id="content"> Content </div>
-
-
-   <div class="cont"  id="Header">Header</div>
-   <div class= "Cont" id="SideBar"></div> 
-
-   <ul>
-        <li class="opcion">Opcion1 
-        <ul class="submenu"> 
-        <li>Opcion 1-1</li>
-        <li>Opcion 1-2 </li>
-        <li>Opcion3 1-2 </li>
-        </ul>
-        </li>
-   </ul> 
-
-   <ul>
-    <li></li>
-
-
-   </ul>
-
-
-
-</body>
-</html> -->
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú Acordeón</title>
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-        body {
-            width: 100vw;
-            height: 100vh;
-        }
-
-        .content {
-            border: 2px solid blue;
-            background-color: aqua;
-            color: blue;
-            float: left;
-            height: 100%;
-        }
-
-        #SideBar {
-            width: 30%;
-        }
-
-        #content {
-            width: 70%;
-        }
-
-        .head {
-            border: 2px solid yellow;
-            background-color: aqua;
-        }
-
-        #Header {
-            height: 10%;
-        }
-
-        /* Estilos para el menú acordeón */
-        .menu {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .opcion  {
-            cursor: pointer;
-            background-color: #ddd;
-            padding: 10px;
-            margin: 5px;
-            border-radius: 5px;
-        }
-
-        .submenu:hover {
-            display: none;
-            padding-left: 20px;
-        }
-
-        .opcion.active .submenu {
-            display: block;
-        }
-    </style>
-</head>
-<body>
-    <div class="head" id="Header">Header</div>
-    <div class="content" id="SideBar">
-        <ul class="menu">
-            <li class="opcion">Opcion1
-                <ul class="submenu">
-                    <li>Opcion 1-1</li>
-                    <li>Opcion 1-2</li>
-                    <li>Opcion 1-3</li>
-                </ul>
-            </li>
-            <li class="opcion">Opcion2
-                <ul class="submenu">
-                    <li>Opcion 2-1</li>
-                    <li>Opcion 2-2</li>
-                </ul>
-            </li>
-            <li class="opcion">Opcion3
-                <ul class="submenu">
-                    <li>Opcion 3-1</li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-    <div class="content" id="content">Content</div>
-    <script>
-        // JavaScript para gestionar el menú acordeón
-        const opciones = document.querySelectorAll('.opcion');
-
-        opciones.forEach(opcion => {
-            opcion.addEventListener('click', () => {
-                opciones.forEach(o => o.classList.remove('active'));
-                opcion.classList.add('active');
-            });
-        });
-    </script>
-</body>
-</html>
-
-
-
-
-
-
-
-
+ </head>
+ <body>
+     <div class="head" id="Header">Header</div>
+     <div class="content" id="SideBar">
+         <ul class="menu">
+             <li class="opcion"><a href="#">Opcion1</a>
+                 <ul class="submenu">
+                     <li><a href="#">Opcion 1-1</a></li>
+                     <li><a href="#">Opcion 1-2</a></li>
+                     <li><a href="#">Opcion 1-3</a></li>
+                 </ul>
+             </li>
+             <li class="opcion"><a href="#">Opcion2</a>
+                 <ul class="submenu">
+                     <li><a href="#">Opcion 2-1</a></li>
+                     <li><a href="#">Opcion 2-2</a></li>
+                 </ul>
+             </li>
+             <li class="opcion"><a href="#">Opcion3</a>
+                 <ul class="submenu">
+                     <li><a href="#">Opcion 3-1</a></li>
+                 </ul>
+             </li>
+         </ul>
+     </div>
+     <div class="content" id="content">Content</div>
+ </body>
+ </html>
+ 
+ 
