--- a/Parcial3/Formulario/Formulario.html
+++ b/Parcial3/Formulario/Formulario.html
@@ -5,43 +5,143 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario Simple</title>
 </head>
+
 <body>
 
     <h2>Formulario </h2>
 
+
+
     <form action="#" method="post">
+
+        
         <!-- Campo 1: Nombre -->
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required>
+
+        <label for="idNumeroControl">NumeroControl</label>
+        <input type="text" id="idNumeroControl"  name="idNumeroControl" required>
         <br>
 
-        <!-- Campo 2: Correo electrónico -->
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
+        <label for="Nombres">Nombre:</label>
+        <input type="text" id="Nombres" name="Nombres" required>
         <br>
 
-        <!-- Campo 3: Contraseña -->
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required>
+        <label for="ApellidoPaterno">ApellidoPaterno:</label>
+        <input type="text" id="ApellidoPaterno" name ="ApellidoPaterno" required>
         <br>
 
-        <!-- Campo 4: Edad -->
-        <label for="edad">Edad:</label>
-        <input type="number" id="edad" name="edad" required>
+        <label for ="ApellidoMaterno">ApellidoMaterno:</label>
+        <input type="text" id="ApellidoMaterno" name = "ApellidoMaterno" required>
         <br>
 
-        <!-- Campo 5: Género -->
-        <label for="genero">Género:</label>
-        <select id="genero" name="genero">
-            <option value="masculino">Masculino</option>
-            <option value="femenino">Femenino</option>
-            <option value="otro">Otro</option>
-        </select>
+        <label for ="Sexo">Sexo:</label>
+        <input type="text" id="Sexo" name ="Sexo" required>
+        <br>
+        
+        <label for ="Edad">Edad: </label>
+        <input type="text" id="Edad" name="Edad" required>
         <br>
 
-        <!-- Botón de envío -->
-        <input type="submit" value="Enviar">
+        <label  for ="IngresosM">IngresosM:</label>
+        <input type="text" id="IngresosM" name="IngresosM"  required>
+        <br>
+        <label for ="Carrera">Carrera</label> 
+        <input type="text" id="Carrera" name ="Carrera" required>
+        <br>
+
+
+        <button id="btnAgregar" type="button" class="btn btn-success mr-1">Agregar</button>
+
     </form>
+
+    <script>
+
+
+document.getElementById("btnAgregar").addEventListener("click", function() {
+    let idNumeroControl = document.getElementById("idNumeroControl").value;
+    let Nombres = document.getElementById("Nombres").value;
+    let ApellidoPaterno = document.getElementById("ApellidoPaterno").value;
+    let ApellidoMaterno = document.getElementById("ApellidoMaterno").value;
+    let Sexo = document.getElementById("Sexo").value;
+    let Edad = document.getElementById("Edad").value;
+    let IngresosM = document.getElementById("IngresosM").value;
+    let Carrera = document.getElementById("Carrera").value;
+
+    // Validar campos vacíos
+    if (
+        idNumeroControl === "" ||
+        Nombres === "" ||
+        ApellidoPaterno === "" ||
+        ApellidoMaterno === "" ||
+        Sexo === "" ||
+        Edad === "" ||
+        IngresosM === "" ||
+        Carrera === ""
+    ) {
+        alert("Faltan llenar campos.");
+        return; // Detener el flujo si hay campos vacíos
+    }
+
+    // Validar tipos de datos
+    if (
+        !Number.isInteger(Number(idNumeroControl)) ||
+        typeof Nombres !== "string" ||
+        typeof ApellidoPaterno !== "string" ||
+        typeof ApellidoMaterno !== "string" ||
+        typeof Sexo !== "string" ||
+        !Number.isInteger(Number(Edad)) ||
+        !Number.isInteger(Number(IngresosM)) ||
+        typeof Carrera !== "string"
+    ) {
+        alert("Verifique los tipos de datos.");
+        return; // Detener el flujo si hay tipos de datos incorrectos
+    }
+
+    let nuevoGenero = {
+        idNumeroControl: idNumeroControl,
+        Nombres: Nombres,
+        ApellidoPaterno: ApellidoPaterno,
+        ApellidoMaterno: ApellidoMaterno,
+        Sexo: Sexo,
+        Edad: Edad,
+        IngresosM: IngresosM,
+        Carrera: Carrera
+    };
+
+    fetch('http://localhost:8082/alumnos', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(nuevoGenero)
+    })
+    .then(respuesta => {
+        if (respuesta.ok) {
+            Swal.fire({
+                icon: 'success',
+                title: 'Éxito',
+                text: 'Alumno agregado exitosamente.'
+            });
+        } else {
+            Swal.fire({
+                icon: 'error',
+                title: 'Error',
+                text: 'Verifique los tipos de datos.'
+            });
+        }
+        return respuesta.json();
+    })
+    .then(resultado => {
+        console.log(resultado);
+    });
+});
+
+
+
+
+
+
+
+    </script>
 
 </body>
 </html>
